# BandPassGpuFilter

./: CMakeLists.txt  README.md
gtests/unit_tests/: sound_denoiser_tests.cpp
include/: AudioIO.hpp  CudaDenoise.hpp  CudaFiltering.hpp  CudaMemory.hpp  ErrChecker.hpp  FfmpegHandler.hpp
src/: AudioIO.cpp  CudaDenoise.cu  CudaFiltering.cu  FfmpegHandler.cpp  main.cpp
